# xhalford-blog

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  requirements-prod.txt  requirements.txt
blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_commment.py  0003_auto_20210116_1516.py  0004_comment_allowed.py  0005_auto_20210117_1646.py  0006_auto_20210117_1648.py  0007_comment_moderate.py  0008_remove_comment_allowed.py  0009_remove_comment_moderate.py  0010_post_image.py  0011_auto_20210126_1319.py  0012_auto_20210209_1608.py  0013_post_description.py  0014_post_saves.py
blog/static/blog/css/: style.css  style.scss  test.scss
blog/templates/: draft_index.html  footer.html  index.html  navbar.html  post_create.html  post_detail.html  post_edit.html  saved_index.html  search_results.html  settings.html  sidebar_account.html  sidebar_tags.html  sidebar_theme.html  tag_index.html
blog/templates/partials/: saves_area.html
blog_backend/: asgi.py  settings.py  urls.py  wsgi.py
newsletter/: admin.py  models.py  urls.py  utils.py  views.py
newsletter/migrations/: 0001_initial.py
newsletter/templates/: newsletter_subscription.html
newsletter/templates/emails/: subscription.html  subscription.txt
newsletter/templates/partials/: newsletter_area.html
static/blog/css/: accounts.css  monokai.css  style.css  style.css.map  style.scss  test.css  test.css.map
templates/: base.html
templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/account/snippets/: already_logged_in.html
templates/admin/: base_site.html
templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html  signup.html
