[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydocstyle]
inherit = false
convention = "google"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.coverage]
branch = true

[tool.bandit]

[tool.poetry]
name = "xhalford-blog"
version = "1.0.0"
description = "Personal blog used to create and publish informational and tutorial style articles"
authors = ["Richard Halford <richard@xhalford.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/rsHalford/xhalford-blog"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
django-allauth = "^0.47.0"
django-compressor = "^3.1"
django-sass-processor = "^1.1"
django-markdownx = "^4.0.0b1"
python-decouple = "^3.5"
readtime = "^1.1.1"
dj-database-url = "^0.5.0"
django-taggit = {git = "https://github.com/jazzband/django-taggit.git"}
libsass = "^0.21.0"

[tool.poetry.group.production.dependencies]
psycopg2 = "^2.9.3"

[tool.poetry.group.development.dependencies]
black = "^21.12-beta.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.16.0"
mypy = "^0.931"
pydocstyle = "^6.1.1"
bandit = "^1.7.1"

[tool.poetry.group.testing.dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
